force-app/main/default/objects/Opportunity/fields/OwnerExpirationNotice__c.field-meta.xml
<CustomField>
    <fullName>OwnerExpirationNotice__c</fullName>
    <label>Owner Expiration Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>15일</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30일</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45일</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60일</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90일</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>120일</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>