force-app/main/default/objects/Opportunity/fields/permsnIndstrytyList__c.field-meta.xml
<CustomField>
    <fullName>permsnIndstrytyList__c</fullName>
    <label>permsnIndstrytyList</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>