force-app/main/default/objects/Opportunity/fields/prdctClsfcLmtYn__c.field-meta.xml
<CustomField>
    <fullName>prdctClsfcLmtYn__c</fullName>
    <label>Goods Classification Y/N</label>
    <length>1</length>
    <type>Text</type>
</CustomField>