force-app/main/default/objects/Opportunity/fields/PreArrangePriceDecisionMethod__c.field-meta.xml
<CustomField>
    <fullName>PreArrangePriceDecisionMethod__c</fullName>
    <label>Pre Arrange Price Decision Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>