force-app/main/default/objects/Opportunity/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>제품명</description>
    <label>Product Name</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>