force-app/main/default/objects/Opportunity/fields/ProfitRate__c.field-meta.xml
<CustomField>
    <fullName>ProfitRate__c</fullName>
    <description>이익율(%)</description>
    <label>Profit Rate (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>