force-app/main/default/objects/Opportunity/fields/Proposal_AcquisitionNegotiation__c.field-meta.xml
<CustomField>
    <fullName>Proposal_AcquisitionNegotiation__c</fullName>
    <label>Proposal_AcquisitionNegotiation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>