force-app/main/default/objects/Opportunity/fields/Proposal_All__c.field-meta.xml
<CustomField>
    <fullName>Proposal_All__c</fullName>
    <label>Proposal_All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>