force-app/main/default/objects/Opportunity/fields/Proposal_BSType__c.field-meta.xml
<CustomField>
    <fullName>Proposal_BSType__c</fullName>
    <label>Proposal_BSType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>보세구역 외</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>보세구역 내</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>