force-app/main/default/objects/Opportunity/fields/Proposal_ContractExpireDate__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ContractExpireDate__c</fullName>
    <label>Proposal_ContractExpireDate</label>
    <type>Date</type>
</CustomField>