force-app/main/default/objects/Opportunity/fields/Proposal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal_Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>영업활동</relationshipLabel>
    <relationshipName>Proposal_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>