force-app/main/default/objects/Opportunity/fields/Proposal_DailyMeal__c.field-meta.xml
<CustomField>
    <fullName>Proposal_DailyMeal__c</fullName>
    <label>Proposal_DailyMeal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>