force-app/main/default/objects/Opportunity/fields/Proposal_DifferenceAmountProposalFee__c.field-meta.xml
<CustomField>
    <fullName>Proposal_DifferenceAmountProposalFee__c</fullName>
    <label>Proposal_DifferenceAmountProposalFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>