force-app/main/default/objects/Opportunity/fields/Proposal_ExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ExecutionDate__c</fullName>
    <label>Proposal_ExecutionDate</label>
    <type>Date</type>
</CustomField>