force-app/main/default/objects/Opportunity/fields/Proposal_ExpectDailyMeals__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ExpectDailyMeals__c</fullName>
    <label>Proposal_ExpectDailyMeals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>