force-app/main/default/objects/Opportunity/fields/Proposal_FacilityInvestmentAmount__c.field-meta.xml
<CustomField>
    <fullName>Proposal_FacilityInvestmentAmount__c</fullName>
    <label>Proposal_FacilityInvestmentAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>