force-app/main/default/objects/Opportunity/fields/Proposal_InputManpower__c.field-meta.xml
<CustomField>
    <fullName>Proposal_InputManpower__c</fullName>
    <label>Proposal_InputManpower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>