force-app/main/default/objects/Opportunity/fields/Proposal_Meal__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Meal__c</fullName>
    <label>Proposal_Meal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>상수도</fullName>
            </value>
            <value>
                <fullName>지하수</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>