force-app/main/default/objects/Opportunity/fields/Proposal_MenuOther__c.field-meta.xml
<CustomField>
    <fullName>Proposal_MenuOther__c</fullName>
    <label>Proposal_MenuOther</label>
    <length>13200</length>
    <type>LongTextArea</type>
</CustomField>