force-app/main/default/objects/Opportunity/fields/Proposal_NewInvestment__c.field-meta.xml
<CustomField>
    <fullName>Proposal_NewInvestment__c</fullName>
    <label>Proposal_NewInvestment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>