force-app/main/default/objects/Opportunity/fields/Proposal_OpenDate__c.field-meta.xml
<CustomField>
    <fullName>Proposal_OpenDate__c</fullName>
    <label>Proposal_OpenDate</label>
    <type>Date</type>
</CustomField>