force-app/main/default/objects/Opportunity/fields/Proposal_Operating_Industry__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Operating_Industry__c</fullName>
    <label>Proposal_Operating_Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>