force-app/main/default/objects/Opportunity/fields/Proposal_Partner_Background__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Partner_Background__c</fullName>
    <label>Proposal_Partner_Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>