force-app/main/default/objects/Opportunity/fields/Proposal_ProposalDate__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ProposalDate__c</fullName>
    <label>Proposal_ProposalDate</label>
    <type>Date</type>
</CustomField>