force-app/main/default/objects/Opportunity/fields/Proposal_ProposedCompany__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ProposedCompany__c</fullName>
    <label>Proposal_ProposedCompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>