force-app/main/default/objects/Opportunity/fields/Proposal_ProposedFoodPrice__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ProposedFoodPrice__c</fullName>
    <label>Proposal_ProposedFoodPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>