force-app/main/default/objects/Opportunity/fields/Proposal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Reason__c</fullName>
    <label>Proposal_Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>