force-app/main/default/objects/Opportunity/fields/Proposal_Rentfeemillionwon__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Rentfeemillionwon__c</fullName>
    <label>Proposal_Rentfeemillionwon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>