force-app/main/default/objects/Opportunity/fields/Proposal_SafetyHealthAppointment__c.field-meta.xml
<CustomField>
    <fullName>Proposal_SafetyHealthAppointment__c</fullName>
    <label>Proposal_SafetyHealthAppointment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>불필요</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>필요</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>