force-app/main/default/objects/Opportunity/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <label>Proposal_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>신규제안</fullName>
            </value>
            <value>
                <fullName>기타(오픈)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>