force-app/main/default/objects/Opportunity/fields/Proposal_UrgentB__c.field-meta.xml
<CustomField>
    <fullName>Proposal_UrgentB__c</fullName>
    <label>Proposal_UrgentB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>