force-app/main/default/objects/Opportunity/fields/Proposal_Utility__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Utility__c</fullName>
    <label>Proposal_Utility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>전기</fullName>
            </value>
            <value>
                <fullName>수도</fullName>
            </value>
            <value>
                <fullName>가스</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>