force-app/main/default/objects/Opportunity/fields/ProposalDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalDate__c</fullName>
    <label>ProposalDate</label>
    <type>Date</type>
</CustomField>