force-app/main/default/objects/Opportunity/fields/ProposalDealine__c.field-meta.xml
<CustomField>
    <fullName>ProposalDealine__c</fullName>
    <formula>If ( 
Today() -  ProposalDate__c &lt; 0, &quot;D&quot; &amp; Text (Today() -  ProposalDate__c), 
 If ( Today() -  ProposalDate__c = 0, &quot;D-0&quot;, &quot;D+&quot; &amp; Text(Today() -  ProposalDate__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Dealine</label>
    <type>Text</type>
</CustomField>