force-app/main/default/objects/Opportunity/fields/ProposalExclReceiptRate__c.field-meta.xml
<CustomField>
    <fullName>ProposalExclReceiptRate__c</fullName>
    <label>Proposal Excl Receipt Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>