force-app/main/default/objects/Opportunity/fields/ProposalGenPaymentRate__c.field-meta.xml
<CustomField>
    <fullName>ProposalGenPaymentRate__c</fullName>
    <label>Proposal Gen Payment Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>