force-app/main/default/objects/Opportunity/fields/ProposedCostRate__c.field-meta.xml
<CustomField>
    <fullName>ProposedCostRate__c</fullName>
    <label>ProposedCostRate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>