force-app/main/default/objects/Opportunity/fields/Proposla_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposla_Name__c</fullName>
    <label>Proposla_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>