force-app/main/default/objects/Opportunity/fields/PTDate__c.field-meta.xml
<CustomField>
    <fullName>PTDate__c</fullName>
    <label>PT Date</label>
    <type>Date</type>
</CustomField>