force-app/main/default/objects/Opportunity/fields/PTExecutionDeadline__c.field-meta.xml
<CustomField>
    <fullName>PTExecutionDeadline__c</fullName>
    <formula>If( 
Today() -  PTDate__c &lt; 0, &quot;D&quot; &amp; Text(Today() -  PTDate__c), 
If( Today() -  PTDate__c = 0, &quot;D-0&quot;, &quot;D+&quot; &amp; Text(Today() -  PTDate__c) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Execution Deadline</label>
    <type>Text</type>
</CustomField>