force-app/main/default/objects/Opportunity/fields/PurchasingCost__c.field-meta.xml
<CustomField>
    <fullName>PurchasingCost__c</fullName>
    <label>PurchasingCost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>