force-app/main/default/objects/Opportunity/fields/RateAmountCommision__c.field-meta.xml
<CustomField>
    <fullName>RateAmountCommision__c</fullName>
    <label>Rate/Amount(Commision)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>요율</fullName>
            </value>
            <value>
                <fullName>금액</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>