force-app/main/default/objects/Opportunity/fields/RateAmountIncentice__c.field-meta.xml
<CustomField>
    <fullName>RateAmountIncentice__c</fullName>
    <label>Rate/Amount(Incentive)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>요율</fullName>
                <default>true</default>
                <label>요율</label>
            </value>
            <value>
                <fullName>금액</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>