force-app/main/default/objects/Opportunity/fields/ReceivablesTurnoverCondition__c.field-meta.xml
<CustomField>
    <fullName>ReceivablesTurnoverCondition__c</fullName>
    <label>Receivables Turnover Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>