force-app/main/default/objects/Opportunity/fields/Refrigerated__c.field-meta.xml
<CustomField>
    <fullName>Refrigerated__c</fullName>
    <label>Refrigerated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>