force-app/main/default/objects/Opportunity/fields/RoomTemparature__c.field-meta.xml
<CustomField>
    <fullName>RoomTemparature__c</fullName>
    <label>Room Temparature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>