force-app/main/default/objects/Opportunity/fields/SalesRevenue__c.field-meta.xml
<CustomField>
    <fullName>SalesRevenue__c</fullName>
    <label>SalesRevenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>