force-app/main/default/objects/Opportunity/fields/SampleFoodDate__c.field-meta.xml
<CustomField>
    <fullName>SampleFoodDate__c</fullName>
    <label>SampleFood Date</label>
    <type>Date</type>
</CustomField>