force-app/main/default/objects/Opportunity/fields/SKUSales__c.field-meta.xml
<CustomField>
    <fullName>SKUSales__c</fullName>
    <label>SKU Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>