force-app/main/default/objects/Opportunity/fields/SOWCategory__c.field-meta.xml
<CustomField>
    <fullName>SOWCategory__c</fullName>
    <label>SOWCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>직수입/독점/특화 상품</fullName>
            </value>
            <value>
                <fullName>전용 상품</fullName>
            </value>
            <value>
                <fullName>밀키트</fullName>
            </value>
            <value>
                <fullName>신메뉴</fullName>
            </value>
            <value>
                <fullName>사이드 메뉴</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>