force-app/main/default/objects/Opportunity/fields/SOWProductName__c.field-meta.xml
<CustomField>
    <fullName>SOWProductName__c</fullName>
    <label>SOWProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>