force-app/main/default/objects/Opportunity/fields/TargetProfit__c.field-meta.xml
<CustomField>
    <fullName>TargetProfit__c</fullName>
    <description>타켓이익</description>
    <label>Target Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>