force-app/main/default/objects/Opportunity/fields/TargetSales__c.field-meta.xml
<CustomField>
    <fullName>TargetSales__c</fullName>
    <description>타켓매출</description>
    <label>Target Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>