force-app/main/default/objects/Opportunity/fields/TradingProduct__c.field-meta.xml
<CustomField>
    <fullName>TradingProduct__c</fullName>
    <label>TradingProduct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>