force-app/main/default/objects/Opportunity/fields/TransactionCondition__c.field-meta.xml
<CustomField>
    <fullName>TransactionCondition__c</fullName>
    <description>제안예정 거래조건</description>
    <label>Transaction Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>