force-app/main/default/objects/Opportunity/fields/workflowsbtn__c.field-meta.xml
<CustomField>
    <fullName>workflowsbtn__c</fullName>
    <formula>if( ISBLANK(Account.CustomerID__c) &amp;&amp;  ISPICKVAL(StageName, &apos;Closed Won&apos;) &amp;&amp; Account.IsRequestMDMReg__c==false , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>워크플로우 버튼용</label>
    <type>Checkbox</type>
</CustomField>