force-app/main/default/objects/Opportunity/recordTypes/BiddingContract.recordType-meta.xml
<RecordType>
    <fullName>BiddingContract</fullName>
    <active>true</active>
    <businessProcess>Default Opportunity Sales Process</businessProcess>
    <description>수주 계약</description>
    <label>Bidding Contract</label>
</RecordType>