force-app/main/default/objects/Opportunity/recordTypes/FreeContract.recordType-meta.xml
<RecordType>
    <fullName>FreeContract</fullName>
    <active>true</active>
    <businessProcess>Default Opportunity Sales Process</businessProcess>
    <description>수의 계약</description>
    <label>Free Contract</label>
</RecordType>