force-app/main/default/objects/Opportunity/recordTypes/FSHeadquarter.recordType-meta.xml
<RecordType>
    <fullName>FSHeadquarter</fullName>
    <active>true</active>
    <businessProcess>Default Opportunity Sales Process</businessProcess>
    <description>FS본부에서 사용하는 Opportunity</description>
    <label>FS Headquarter</label>
</RecordType>