force-app/main/default/objects/Opportunity/recordTypes/MilitaryOpportunity.recordType-meta.xml
<RecordType>
    <fullName>MilitaryOpportunity</fullName>
    <active>true</active>
    <businessProcess>Default Opportunity Sales Process</businessProcess>
    <description>국방조달 사이트에서 생성 및 업데이트 되는 Lead로 convert되는 기회</description>
    <label>Military Opportunity</label>
</RecordType>