force-app/main/default/objects/Opportunity/recordTypes/NaraMarketOpportunity.recordType-meta.xml
<RecordType>
    <fullName>NaraMarketOpportunity</fullName>
    <active>true</active>
    <businessProcess>Default Opportunity Sales Process</businessProcess>
    <description>나라장터 사이트에서 생성 및 업데이트 되는 Lead로 convert되는 기회</description>
    <label>Nara Market Opportunity</label>
</RecordType>