force-app/main/default/objects/Opportunity/recordTypes/RestaurantOpportunity.recordType-meta.xml
<RecordType>
    <fullName>RestaurantOpportunity</fullName>
    <active>true</active>
    <businessProcess>Default Opportunity Sales Process</businessProcess>
    <description>외식SU에서 사용하는 Opportunity</description>
    <label>Restaurant Opportunity</label>
</RecordType>