force-app/main/default/objects/Opportunity/recordTypes/SOWOpportunity.recordType-meta.xml
<RecordType>
    <fullName>SOWOpportunity</fullName>
    <active>true</active>
    <businessProcess>Default Opportunity Sales Process</businessProcess>
    <description>외식SU에서 사용하는 추가 상품 관련 Opportunity</description>
    <label>SOWOpportunity</label>
</RecordType>