force-app/main/default/objects/Opportunity/validationRules/BidBeginCloseDateTimeValidationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BidBeginCloseDateTimeValidationCheck</fullName>
    <active>true</active>
    <description>입찰마감일시가 입찰개시일시보다 빠를 경우 ValidationCheck</description>
    <errorConditionFormula>BidBeginDateTime__c  &gt;= BidCloseDateTime__c</errorConditionFormula>
    <errorMessage>입찰마감일시를 입찰개시일시 이후로 설정해주세요.</errorMessage>
</ValidationRule>