force-app/main/default/objects/Opportunity/validationRules/BidOpenDTValidationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BidOpenDTValidationCheck</fullName>
    <active>true</active>
    <description>개찰 일시가 입찰 마감 일시 이전일 경우 에러발동</description>
    <errorConditionFormula>BidOpenDateTime__c &lt;  BidCloseDateTime__c</errorConditionFormula>
    <errorMessage>개찰 일시를 입찰 마감 일시 이후로 설정해주세요.</errorMessage>
</ValidationRule>