force-app/main/default/objects/Opportunity/validationRules/ContractTermValidationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractTermValidationCheck</fullName>
    <active>true</active>
    <description>계약 기간이 양의 정수가 아닐 경우 ValidationCheck</description>
    <errorConditionFormula>ContractTerm__c &lt;= 0</errorConditionFormula>
    <errorMessage>계약기간(월)을 양의 정수로 설정해주세요.</errorMessage>
</ValidationRule>