force-app/main/default/objects/Opportunity/validationRules/OpptyStartEndDateValidationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>OpptyStartEndDateValidationCheck</fullName>
    <active>true</active>
    <description>마감 일자가 개시일시 이전일 경우 ValidationCheck</description>
    <errorConditionFormula>CloseDate &lt; Datevalue(rgstDt__c)</errorConditionFormula>
    <errorMessage>마감 일자를 게시일시 이후로 설정해주세요.</errorMessage>
</ValidationRule>