force-app/main/default/objects/Opportunity/validationRules/OwnerExpriationNoticeValidationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerExpriationNoticeValidationCheck</fullName>
    <active>true</active>
    <description>담당MA 만료 알림이 계약기간보다 길 경우 Validation Check</description>
    <errorConditionFormula>ContractTerm__c &lt;= Value(Text(OwnerExpirationNotice__c))/30</errorConditionFormula>
    <errorMessage>담당MA 만료 알림이 계약기간보다 큽니다.</errorMessage>
</ValidationRule>